check_output.txt
   Compiling xt-screen-translator v0.5.0 (F:\Github\screen-grounded-translator)
error[E0603]: function `upload_audio_to_whisper` is private
   --> src\overlay\process.rs:6:107
    |
  6 | use crate::{AppState, api::{translate_image_streaming, translate_text_streaming, transcribe_audio_gemini, upload_audio_to_whisper}};
    |                                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^ private function
    |
note: the function `upload_audio_to_whisper` is defined here
   --> src\api.rs:748:1
    |
748 | fn upload_audio_to_whisper(api_key: &str, model: &str, audio_data: Vec<u8>) -> anyhow::Result<String> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0282]: type annotations needed
   --> src\overlay\process.rs:524:26
    |
524 |                     *t = full_text.clone(); 
    |                          ^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> src\overlay\process.rs:621:57
    |
621 |                      let error_msg = get_error_message(&e.to_string(), &ui_language);
    |                                                         ^ cannot infer type

warning: variable does not need to be mutable
   --> src\overlay\result\mod.rs:231:17
    |
231 |             let mut show_system_cursor = false;
    |                 ----^^^^^^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `show_system_cursor`
   --> src\overlay\result\mod.rs:231:17
    |
231 |             let mut show_system_cursor = false;
    |                 ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_show_system_cursor`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `error_msg`
  --> src\main.rs:72:13
   |
72 |         let error_msg = if let Some(s) = panic_info.payload().downcast_ref::<&str>() {
   |             ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_error_msg`

Some errors have detailed explanations: E0282, E0603.
For more information about an error, try `rustc --explain E0282`.
warning: `xt-screen-translator` (bin "xt-screen-translator") generated 3 warnings
error: could not compile `xt-screen-translator` (bin "xt-screen-translator") due to 3 previous errors; 3 warnings emitted
